# something-new

./: .gitignore  README.md  mypy.ini  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  food.py  recipe.py  seed.py
app/core/: config.py  database.py  units.py
app/domain/models/: __init__.py  food.py  recipe.py
app/domain/repositories/: __init__.py  food_repository.py  recipe_repository.py
app/domain/schemas/: __init__.py  food.py  recipe.py
app/domain/services/: __init__.py  food_service.py  recipe_service.py
tests/: test_recipe_aggregation.py
