[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-analysis"
version = "0.1.0"
description = "FastAPI app with SQLite, OOP layers, Pydantic v2, mypy"
authors = [{ name = "Yash Tripathi" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.114",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "types-python-dotenv>=0.1.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
